fix: wrapped home page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,6 @@
+html,body{
+    height: 95%;
+}
 body {
     font-family: sans-serif;
     padding: 2vw;
@@ -17,16 +20,22 @@ nav a.current{
 }
 .content {
     padding: 1vw 17vw;
+    flex: 1;
+}
+.page-content {
+    min-height: 95%;
+    display: flex;
+    flex-direction: column;
 }
 .comming_soon {
     text-align: center;
 }
-.content a{
+
+.black_link{
     text-decoration: revert;
     color: black;
     font-style: italic;
 }
-
 #skills ul{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -39,4 +48,12 @@ nav a.current{
 #skills li i{
     font-size: 0.85em;
     font-weight: 600;
+}
+
+#professional_links ul{
+    padding: 0;
+}
+
+footer{
+    text-align:center;
 }
